--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 spring.application.name=budget-budy-service
 
-http.port=5050
-
-mc.budgetbuddy.firebase.account-key-path=PATH_YOUR_AccountKey.json
+chivalrous.budgetbuddy.firebase.account-key-path=PATH_YOUR_AccountKey.json
