JWT added to the project.

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=budget-budy-service
 
-chivalrous.budgetbuddy.firebase.account-key-path=PATH_YOUR_AccountKey.json
+chivalrous.budgetbuddy.jwt.secret-key=<YOUR_SECRET_KEY>
+chivalrous.budgetbuddy.jwt.validity-as-hours=<YOUR_VALIDITY>
+
+chivalrous.budgetbuddy.firebase.account-key-path=<PATH_YOUR_AccountKey.json>
