--- a/service/pom.xml
+++ b/service/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>jxls-jexcel</artifactId>
 			<version>1.0.9</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	
