Web config added. JWT filter edited.

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ chivalrous.budgetbuddy.jwt.secret-key=<YOUR_SECRET_KEY>
 chivalrous.budgetbuddy.jwt.validity-as-hours=<YOUR_VALIDITY>
 
 chivalrous.budgetbuddy.firebase.account-key-path=<PATH_YOUR_AccountKey.json>
+
+chivalrous.budgetbuddy.user.enable-create-user=false
