--- a/client/package.json
+++ b/client/package.json
@@ -10,20 +10,22 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@types/webpack-env": "^1.16.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "formik": "^2.4.2",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.5.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-	 "yup": "^0.32.9",
-	 "@types/webpack-env": "^1.16.0"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
