--- a/service/pom.xml
+++ b/service/pom.xml
@@ -79,6 +79,18 @@
 			<artifactId>jxls-jexcel</artifactId>
 			<version>1.0.9</version>
 		</dependency>
+		<dependency> 
+    		<groupId>org.apache.pdfbox</groupId>
+    		<artifactId>pdfbox</artifactId>
+			<version>2.0.6</version>
+			<!-- 2.0.24 -->
+		</dependency>
+		<dependency>
+    	<groupId>io.github.jonathanlink</groupId>
+    		<artifactId>PDFLayoutTextStripper</artifactId>
+    		<version>2.2.4</version> 
+			<!-- 2.2.3 -->
+		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
