--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "formik": "^2.4.2",
+    "moment": "^2.30.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.5.0",
